fix menu hamburger on iOS 9

--- a/assets/sass/atoms/_hamburger.scss
+++ b/assets/sass/atoms/_hamburger.scss
@@ -16,6 +16,9 @@
 
 .hamburger-helper {
   position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   order: -1;
   width: 80px;
   margin-right: -($grid-gutter-width / 4);
